Tweaked KB type colors to be less intensive.
git-svn-id: https://plugins.svn.wordpress.org/knowledge-building/trunk@155665 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -6,17 +6,17 @@ div.kbtype-label {
 
 /* These color definitions are needed by exported KB typesets from Fle3. */
 .tt_yellow { background-color: #FFD700 }
-.tt_yellowlt { background-color: #ffff99 }
+.tt_yellowlt { background-color: #FFFFAD }
 .tt_orange { background-color: #FF8C00 }
-.tt_orangelt { background-color: #ffd995 }
+.tt_orangelt { background-color: #FFE1AA }
 .tt_red { background-color: #F95050 }
 .tt_pink { background-color: #ebb5bc }
-.tt_purple { background-color: #d3bdff }
+.tt_purple { background-color: #DCCAFF }
 .tt_blue { background-color: #778ECF }
 .tt_bluelt { background-color: #b4c7ff }
-.tt_aqua { background-color: #b6dbcb }
+.tt_aqua { background-color: #C5E2D5 }
 .tt_green { background-color: #67CA67 }
-.tt_greenlt { background-color: #d3fb7e }
+.tt_greenlt { background-color: #DCFC98 }
 .tt_gray { background-color: #A9A9A9 }
 .tt_white { background-color: #FFFFFF }
 
