Basic support for sorting of comments.
git-svn-id: https://plugins.svn.wordpress.org/knowledge-building/trunk@174193 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -24,3 +24,17 @@ div.kbtype-label {
     font-size: 150%;
     padding: 0.3em;
 }
+
+#comment_sorter ul {
+  display: inline;
+  margin: 0;
+  padding: 0.5em;
+}
+
+ #comment_sorter li { 
+  display: inline;
+  margin: 0.1em;
+  padding: 0.5em;
+  color: black;
+  background-color: #888;
+}
