--- a/style.scss
+++ b/style.scss
@@ -4,22 +4,6 @@ div.kbtype-label {
     font-size: 150%;
 }
 
-/* These color definitions are needed by exported KB typesets from Fle3. */
-.tt_yellow { background-color: #FFD700 }
-.tt_yellowlt { background-color: #FFFFAD }
-.tt_orange { background-color: #FF8C00 }
-.tt_orangelt { background-color: #FFE1AA }
-.tt_red { background-color: #F95050 }
-.tt_pink { background-color: #ebb5bc }
-.tt_purple { background-color: #DCCAFF }
-.tt_blue { background-color: #778ECF }
-.tt_bluelt { background-color: #b4c7ff }
-.tt_aqua { background-color: #C5E2D5 }
-.tt_green { background-color: #67CA67 }
-.tt_greenlt { background-color: #DCFC98 }
-.tt_gray { background-color: #A9A9A9 }
-.tt_white { background-color: #FFFFFF }
-
 .ktype_heading {
     font-size: 150%;
     padding: 0.3em;
@@ -63,7 +47,7 @@ div.kbtype-label {
 .knbu-map-view { 
 	margin: 0; 
 	padding: 0; 
-	background-image: url(images/black_lozenge.png); 
+	background-image: url(images/grid.png); 
 	font-family: 'Junge'; 
 
 	#fps { 
@@ -90,19 +74,20 @@ div.kbtype-label {
 		width: 500px;
 		top: 20px;
 		left: 50px;
-		border: 3px solid #222;
+		/* border: 3px solid #222; */
 		box-shadow: 8px 8px 2px rgba(0,0,0,0.3);
 		display: none;
 		margin: 10px;
 		
 		h3 {
 			margin: 0; 
-			margin-bottom: 10px;
 			padding: 0; 
-			float: left;
+			margin-bottom: 8px;
 		}
 		h4 {
 			clear: none !important;
+			background-color: rgba(0, 0, 0, 0.2);
+			margin: 5px;
 		}
 		
 		.message-header {
@@ -110,12 +95,15 @@ div.kbtype-label {
 			height: 40px;
 			line-height: 40px;
 			padding: 0 10px;
+			text-align: center;
 			overflow: hidden;
 			h4 { 
 				color: rgba(255, 255, 255, 1);
 				font-size: 1.5em;
 				white-space: nowrap;
-				text-shadow: 0 0 3px #222222;
+				display: inline;
+				border-radius: 3px;
+				padding: 4px;
 			}
 		}
 		
@@ -125,6 +113,7 @@ div.kbtype-label {
 		
 		.message-meta {
 			float: left;
+			margin: 0 5px 5px 0;
 		}
 		
 		.message-avatar { 
@@ -135,14 +124,12 @@ div.kbtype-label {
 		
 		.message-date {
 			color: #888;
-			font-size: 0.8em;
-			padding: 3px;
+			float: right;
 		}
 		
 		.message-content { 
-			padding: 10px; 
-			float: left; 
-			width: 350px; 
+			display: inline;
+			white-space: pre-wrap;
 		}
 
 		.message-type { 
@@ -190,6 +177,14 @@ div.kbtype-label {
 	#reply-wrapper { 
 		display: none; 
 		clear: both;
+		padding: 7px;
+		
+		select[name="knbu_type"] {
+			border: 1px solid #ccc;
+			border-radius: 3px;
+			font-family: inherit;
+			padding: 0.4rem;
+		}
 	}
 
 	.knbu-form-link { 
