--- a/style.scss
+++ b/style.scss
@@ -81,6 +81,8 @@ div.kbtype-label {
 		position: absolute;
 		background-color: rgba(255, 255, 255, 0.93);
 		width: 50%;
+		min-width: 250px;
+		max-width: 600px;
 		border-radius: 2px;
 		box-shadow: 8px 8px 2px rgba(0,0,0,0.3);
 		display: none;
