--- a/style.scss
+++ b/style.scss
@@ -32,16 +32,35 @@ div.kbtype-label {
 	}
 }
 .comment {
-	margin: 20px;
-	padding: 5px;
+	margin-top: 0.25em;
+	
+	.comment-body {
+		padding: 5px;
+		line-height: 1.3em;
+		border-right: 1px solid rgba(0, 0, 0, 0.1);
+		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	}
 }
 
 .thread-sorted {
-	.depth-1 { margin-left: 25px; }
+	.depth-1 { margin-left: 25px; margin-top: 1.5em; }
 	.depth-2 { margin-left: 50px; }
 	.depth-3 { margin-left: 75px; }
 	.depth-4 { margin-left: 100px; }
 	.depth-5 { margin-left: 125px; }
+}
+
+.knbu-form {
+	input[type="text"], select {
+		border: 1px solid #ccc;
+		border-radius: 3px;
+		font-family: inherit;
+		padding: 10px;
+		color: #888;
+	}
+	label {
+		display: block;
+	}
 }
 
 .knbu-map-view { 
@@ -53,7 +72,8 @@ div.kbtype-label {
 	#full-screen {
 		position: absolute;
 		bottom: 3px;
-		left: 3px;
+		right: 3px;
+		width: 35px;
 		opacity: 0.7;
 		&:hover { opacity: 0.8; }
 		&:active { opacity: 1; }
@@ -81,7 +101,7 @@ div.kbtype-label {
 		position: absolute;
 		background-color: rgba(255, 255, 255, 0.93);
 		width: 50%;
-		min-width: 250px;
+		min-width: 400px;
 		max-width: 600px;
 		border-radius: 2px;
 		box-shadow: 8px 8px 2px rgba(0,0,0,0.3);
@@ -143,10 +163,14 @@ div.kbtype-label {
 		}
 		
 		.message-content { 
-			background-color: #eee;
+			background-color: #f5f5f5;
 			padding: 8px;
 			white-space: pre-wrap;
+			word-wrap: break-word;
 			line-height: 1.4em;
+			border: 0;
+			
+			img { max-width: 100%; }
 		}
 
 		.message-type { 
@@ -240,22 +264,30 @@ div.kbtype-label {
 
 	#navigation { 
 		position: absolute; 
-		bottom: 40px; 
-		right: 40px; 
+		top: 10px; 
+		left: 10px; 
+		
+		#arrow-left { position: absolute; left: -1px; top: 22px; }
+		#arrow-up { position: absolute; left: 24px; top: -1px;  }
+		#arrow-right { position: absolute; left: 55px; top: 24px; }
+		#arrow-down { position: absolute;  left: 25px; bottom: 1px;  }
+		#arrow-center { position: absolute;  left: 31px; bottom: 33px;  }
+		.arrow { opacity: 0.8;  &:hover { opacity: 0.9; } &:active { opacity: 1.0 }}
 		
 		#zoom { 
-			float: right;
 			background-color: rgba(255, 255, 255, 0.3);
 			box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.8);
-			height: 120px;
+			height: 100px;
+			margin: auto;
 			position: relative;
-			width: 20px;
+			width: 10px;
+			margin-top: 20px;
+			padding: 10px 0;
 			
 			.ui-slider-handle {
 				width: 100%;
-				height: 15px;
-				margin-bottom: -0.5em;
-				border-radius: 2px;
+				height: 10px;
+				margin-bottom: -5px;
 				background-color: rgb(220, 220, 220);
 				display: block;
 				position: absolute;
@@ -263,12 +295,8 @@ div.kbtype-label {
 		}
 
 		#pan {
-			width: 80px;
-			height: 80px;
-			margin: 20px;
-			margin-right: 40px;
-			float: right; 
 			position: relative;
+			margin: 5px;
 			
 			div {
 				$size: 20px;
@@ -296,7 +324,7 @@ div.kbtype-label {
 	#legend {
 		position: absolute;
 		left: 15px;
-		bottom: 50px;
+		bottom: 15px;
 		
 		ul {
 			margin: 0;
