--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,7 @@ div.kbtype-label {
 }
 .comment {
 	margin-top: 0.25em;
+	list-style-type: none;
 	
 	.comment-body {
 		padding: 5px;
@@ -107,6 +108,7 @@ div.kbtype-label {
 		box-shadow: 8px 8px 2px rgba(0,0,0,0.3);
 		display: none;
 		margin: 10px;
+		border: 1px solid #444;
 		
 		h3 {
 			margin: 0; 
@@ -239,6 +241,12 @@ div.kbtype-label {
 			
 			cursor: pointer;
 		}
+		li {
+		}
+	}
+	
+	tspan:nth-child(1) {
+		font-size: 1.5em;
 	}
 
 	.knbu-form-link { 
