--- a/style.scss
+++ b/style.scss
@@ -52,15 +52,34 @@ div.kbtype-label {
 }
 
 .knbu-form {
-	input[type="text"], select {
+	label {
+		display: block;
+	}
+}
+
+.knbu-form {
+	select[name="knbu_type"] {
 		border: 1px solid #ccc;
 		border-radius: 3px;
 		font-family: inherit;
-		padding: 10px;
-		color: #888;
+		padding: 0.4rem;
 	}
-	label {
+	#current_user_name, #current_user_email {
+		width: 80% !important;
+	}
+	
+	label { 
+		padding-top: 12px;
+	}
+	
+	.knbu-checklist {
+		padding: 7px;
+	}
+	
+	.knbu-user-fields > span {
 		display: block;
+		width: 50%;
+		float: left;
 	}
 }
 
@@ -220,13 +239,7 @@ div.kbtype-label {
 		display: none; 
 		clear: both;
 		padding: 7px;
-		
-		select[name="knbu_type"] {
-			border: 1px solid #ccc;
-			border-radius: 3px;
-			font-family: inherit;
-			padding: 0.4rem;
-		}
+		background-color: rgba(255,255,255,1);
 	}
 	
 	#grouping {
@@ -245,6 +258,8 @@ div.kbtype-label {
 		}
 	}
 	
+	
+	
 	tspan:nth-child(1) {
 		font-size: 1.5em;
 	}
@@ -254,10 +269,9 @@ div.kbtype-label {
 		display: block; 
 		float: left;
 		cursor: pointer; 
-		color: white; 
 		padding: 5px; 
-		background-color: rgba(40, 60, 100, 0.3);
 		text-decoration: none;
+		&:hover, &:active { text-decoration: underline; }
 	}
 
 	#message .logged-in-as { 
